--- a/app.wxss
+++ b/app.wxss
@@ -232,6 +232,12 @@
   width: 1px;
   background: #fff;
 }
+.line-blue{
+	width: 8rpx;
+	height: 34rpx;
+	background: linear-gradient(0deg, #4FACFE 0%, #00F2FE 100%);
+	border-radius: 4rpx;
+}
 .ptb5 {
   padding-top: 10rpx;
   padding-bottom: 10rpx;
