--- a/pages/agent/agent.wxml
+++ b/pages/agent/agent.wxml
@@ -4,12 +4,94 @@
 		<image src="../../img/icon_search.png" class="v-middle" style="width: 44rpx;height: 44rpx;"></image>
 		<text class="plr10" style="color: #A5B1C4;">搜索下级代理</text>
 	</navigator>
-	<view class="mt10">
+	<view class="mt10" style="height: 80rpx;">
 		<view class="flexBox center-item">
 			<text class="line-blue dib"></text>
 			<text class="c-33 f16 fb plr10">下级代理总数:</text>
 			<text class="f24 fb" style="color: #418EFC;">2148</text>
 			<text class="f12 c-33">(人)</text>
+		</view>
+	</view>
+	<view class="tc" wx:if='{{ifList}}'>
+		<image src="../../img/order_none.png" style="width: 100;height: 464rpx;margin-top: 150rpx;"></image>
+		<view class="f14 c-33 mt10">您还没有下级代理哦</view>
+	</view>
+	<!-- <scroll-view scroll-y="true" class='shop-view plr15 border-box'></scroll-view> -->
+	<view class='shop-view plr15 border-box ptb10'>
+		<!-- wx:for -->
+		<view wx:for="{{testList}}" wx:key="index" class="list-items bg-white p10 border-box prelative mt10">
+			<view class="justbetween">
+				<view class="flexBox center-item">
+					<image src="../../img/head_default.png" style="width: 78rpx;height: 78rpx;"></image>
+					<text class="plr10 c-33 f16 fb">{{item.name}}</text>
+				</view>
+				<view class="flexBox center-item">
+					<image src="../../img/icon_phone.png" style="width: 30rpx;height: 30rpx;"></image>
+					<text class="plr10 c-33 f16 fb">{{item.phone}}</text>
+					<image src="../../img/icon_next.png" style="width: 15rpx;height: 26rpx;"></image>
+				</view>
+			</view>
+			<view class="justbetween center-item ptb10">
+				<view class="plr5">
+					<image src="../../img/icon_kind.png" style="width: 16rpx;height: 16rpx;"></image>
+					<text class="plr5 c-99 f12">8口</text>
+				</view>
+				<view>
+					<text class="f12 c-99 plr10">总台数(台):<text class="f15 c-33">{{item.data1}}</text></text>
+					<text class="f12 c-99">已铺货(台):<text class="f15 c-33 plr5">{{item.data1}}</text></text>
+				</view>
+			</view>
+			<view class="justbetween center-item">
+				<view class="plr5">
+					<image src="../../img/icon_ad.png" style="width: 16rpx;height: 16rpx;"></image>
+					<text class="plr5 c-99 f12">8口</text>
+				</view>
+				<view>
+					<text class="f12 c-99 plr10">总条数(条):<text class="f15 c-33">{{item.data1}}</text></text>
+					<text class="f12 c-99">已铺货(条):<text class="f15 c-33 plr5">{{item.data1}}</text></text>
+				</view>
+			</view>
+			<view class="justbetween center-item bt1 ptb10">
+				<view>
+					<text class="f12 c-99 plr10">电宝分润:<text class="f15 c-3EE156">{{item.data1}}</text></text>
+					<text class="f12 c-99">线充分润:<text class="f15 c-3EE156 plr5">{{item.data1}}</text></text>
+				</view>
+				<view class="btn-bind btn-list tc">
+					<text class="plr5 f15">修改</text>
+					<image src="../../img/icon_nextb.png" style="width: 15rpx;height: 26rpx;"></image>
+				</view>
+			</view>
+			<view class="box-height tc mt5">
+				<view class="flexBox">
+					<view class="flexItem">
+						<view class="fb f16 c-F9961D">{{item.data2}}</view>
+						<text class="f12 c-99">总收益</text>
+					</view>
+					<view class="flexItem">
+						<view class="fb f16 c-418EFC">{{item.data2}}</view>
+						<text class="f12 c-99">商户总数</text>
+					</view>
+					<view class="flexItem">
+						<view class="fb f16 c-418EFC">{{item.data2}}</view>
+						<text class="f12 c-99">租赁订单数</text>
+					</view>
+				</view>
+				<view wx:if="{{item.status}}" class="flexBox mt5">
+					<view class="flexItem">
+						<view class="fb f16 c-F9961D">{{item.data2}}</view>
+						<text class="f12 c-99">当日收益</text>
+					</view>
+					<view class="flexItem">
+						<view class="fb f16 c-F9961D">{{item.data2}}</view>
+						<text class="f12 c-99">本月收益</text>
+					</view>
+					<view class="flexItem"></view>
+				</view>
+			</view>
+			<view class="icon-switch" bindtap="switch" data-index="{{index}}">
+				<image wx:if="{{item.status}}" src="../../img/icon_up.png" style="width: 26rpx;height: 12rpx;"></image>
+				<image wx:else src="../../img/icon_down.png" style="width: 26rpx;height: 12rpx;"></image>
+			</view>
 		</view>
 	</view>
 </view>
