--- a/pages/manage/manage.wxml
+++ b/pages/manage/manage.wxml
@@ -1,14 +1,14 @@
 <view class="main plr15 border-box">
 	<view class="mt10 flexBox center-item"><text class="line-blue dib"></text><text class="plr10">常用功能</text></view>
 	<view class="card-box center-item">
-		<view wx:for="{{kinds1}}" class="card-item tc border-box ptb15 mt10">
+		<view wx:for="{{kinds1}}" wx:key="index" class="card-item tc border-box ptb15 mt10" bindtap="navigatorTo" data-url="{{item.url}}">
 			<image src="{{item.src}}" style="width: 80rpx;height: 80rpx;"></image>
 			<view class="f15 c-33 mt5">{{item.text}}</view>
 		</view>
 	</view>
 	<view class="mt10 flexBox center-item"><text class="line-blue dib"></text><text class="plr10">更多</text></view>
 	<view class="card-box center-item">
-		<view wx:for="{{kinds2}}" class="card-item tc border-box ptb15 mt10">
+		<view wx:for="{{kinds2}}" wx:key="index" class="card-item tc border-box ptb15 mt10" bindtap="navigatorTo" data-url="{{item.url}}">
 			<image src="{{item.src}}" style="width: 80rpx;height: 80rpx;"></image>
 			<view class="f15 c-33 mt5">{{item.text}}</view>
 		</view>
