--- a/pages/shopin3/shopin3.wxss
+++ b/pages/shopin3/shopin3.wxss
@@ -1,1 +1,50 @@
-/* pages/shopin3/shopin3.wxss */
+.point-y{
+	background: #FEB41F;
+	border-radius: 50%;
+	width: 10rpx;
+	height: 10rpx;
+}
+.btn-in{
+	width: 120rpx;
+	height: 50rpx;
+	line-height: 50rpx;
+	border-radius: 5px;
+}
+.img-in{
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+.in-content{
+	width: 400rpx;
+}
+.withdrawal{
+	height: 100rpx;
+	line-height: 100rpx;
+	background: linear-gradient(-6deg, #3F8DFC 0%, #76D3FE 100%);
+	border-radius: 15px;
+}
+.time-box{
+	background: #F1F5FA;
+	border-radius: 5px;
+}
+.btn-back{
+	width:300rpx;
+	height: 100rpx;
+	line-height: 100rpx;
+	border-radius: 15px;
+	border:1px solid #3F8DFC;
+	color: #418EFC;
+}
+.btn-next{
+	width:300rpx;
+	height: 100rpx;
+	line-height: 100rpx;
+	background: linear-gradient(-6deg, #3F8DFC 0%, #76D3FE 100%);
+	border-radius: 15px;
+}
+.search-box {
+	background: #F5F5F5;
+	border-radius: 20rpx;
+}
