--- a/pages/personalmsg/personalmsg.wxml
+++ b/pages/personalmsg/personalmsg.wxml
@@ -5,7 +5,7 @@
 		</view>
 	</view>
 	<view class="mt20">
-		<view class="p-items justbetween center-item plr10 ptb15 border-box">
+		<view bindtap='changeName' class="p-items justbetween center-item plr10 ptb15 border-box">
 			<view class="flexBox center-item">
 				<text class="f15 c-33 plr10">用户昵称</text>
 			</view>
@@ -41,4 +41,17 @@
 			</view>
 		</view>
 	</view>
+	<block wx:if="{{nameBox}}">
+		<view class="bg-meng"></view>
+		<view class="name-box bg-white border-box plr15 ptb20 tc">
+			<view class="tc f20 fb mt10">修改昵称</view>
+			<view class="tc input-box dib mt20">
+				<input type="text" placeholder="请输入2-8位昵称" style="height: 100%;" />
+			</view>
+			<view class="justbetween center-item f20 tc mt20">
+				<view bindtap="changeName" class="btn-name name-cancle c-66 border-box">取消</view>
+				<view class="btn-name name-sure">确定</view>
+			</view>
+		</view>
+	</block>
 </view>
