--- a/pages/personalmsg/personalmsg.wxss
+++ b/pages/personalmsg/personalmsg.wxss
@@ -1,14 +1,52 @@
-.card-invent{
+.card-invent {
 	background: #F1F5FA;
 	border-radius: 5px;
 	width: 330rpx;
 }
-.card-notice{
+
+.card-notice {
 	background: #FEFAE7;
 	border-radius: 5px;
 	width: 330rpx;
 }
-.p-items{
+
+.p-items {
 	/* height: 120rpx; */
 	background: #F8F9FB;
+}
+
+.name-box {
+	width: 600rpx;
+	height: 460rpx;
+	border-radius: 10rpx;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 99;
+}
+
+.btn-name {
+	width: 260rpx;
+	height: 100rpx;
+	line-height: 100rpx;
+	border-radius: 30rpx;
+}
+
+.name-cancle {
+	border: 1px solid #B5B5B5;
+}
+
+.name-sure {
+
+	background: linear-gradient(-6deg, #3F8DFC 0%, #76D3FE 100%);
+	color: #ffffff;
+}
+
+.input-box {
+	width: 460rpx;
+	height: 88rpx;
+	line-height: 88rpx;
+	border: 1px solid #B5B5B5;
+	border-radius: 10rpx;
 }
